# audio_video-ER

./: .gitignore  LICENSE  README.md  README_Tutte le informazioni utili.txt
Pepper_Restart_Python2.7/: pepper_audio_server.py  pose_image_sender.py
ros2_ws/: requirements.txt  requirements_ros2_pepper.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/mediapipe_ros/share/ament_index/resource_index/package_run_dependencies/: mediapipe_ros
ros2_ws/install/mediapipe_ros/share/mediapipe_ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/mediapipe_ros/share/mediapipe_ros/cmake/: mediapipe_rosConfig.cmake
ros2_ws/install/pepper_project/share/pepper_project/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/pepper_project/: pose_image_receiver.py  sentyment_analysis.py  setup.cfg  setup.py
ros2_ws/src/pepper_project/pepper_project/: start_ros_nodes.sh
