<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pepper_project</name>
  <version>0.0.1</version>
  <description>Un pacchetto per gestire audio e immagini da Pepper</description>
  <maintainer email="cais@todo.todo">cais</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dipendenze principali per il progetto -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>cv-bridge</exec_depend>
  <exec_depend>fer</exec_depend>

  <!-- Dipendenze per i test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
